# Vibe

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  MakefilePC  README.md  Vibe  compile.sh  make.config  make.config.pc
.github/workflows/: build.yml
Assets/: background.png~  desktop.fs  desktop.vs  dos.fnt  dos.font  mainMenu.png~
glew-windows-2.1.0/include/GL/: eglew.h
inc/: app.h  audio.h  beatmap.h  beatmapList.h  beatmapinfo.h  callback.h  easing.h  file_util.h  fileutil.h  fontFile.h  fontRenderer.h  gaming.h  gfx.h  input.h  logging.h  mainMenu.h  main_menu.h  maniahit_display.h  mesh.h  options.h  pctypes.h  replay.h  replay_management_screen.h  results_screen.h  scoring.h  settings_menu.h  songSelect.h  song_list.h  song_select.h  songlist.h  sprite.h  strutil.h  text_renderer.h  texture.h  tilemap.h  time.h  time_util.h  vertex.h
inc/engine/: app.h  audio.h  callback.h  easing.h  file_util.h  gfx.h  input.h  mesh.h  pctypes.h  sprite.h  strutil.h  text_renderer.h  texture.h  tilemap.h  time_util.h  vertex.h
inc/game/: beatmap.h  gaming.h  main_menu.h  maniahit_display.h  options.h  replay.h  replay_management_screen.h  results_screen.h  scoring.h  settings_menu.h  song_list.h  song_select.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: audio.c  beatmap.c  beatmapinfo.c  callback.c  easing.c  file_util.c  fileutil.c  fontFile.c  fontRenderer.c  gaming.c  gfx.c  input.c  logging.c  main.c  mainMenu.c  main_menu.c  maniahit_display.c  mesh.c  options.c  replay.c  replay_management_screen.c  results_screen.c  scoring.c  settings_menu.c  songSelect.c  song_list.c  song_select.c  songlist.c  sprite.c  strutil.c  text_renderer.c  texture.c  tilemap.c  time.c  time_util.c  vertex.c
src/engine/: audio.c  callback.c  easing.c  file_util.c  gfx.c  input.c  mesh.c  sprite.c  strutil.c  text_renderer.c  texture.c  tilemap.c  time_util.c
src/game/: beatmap.c  gaming.c  main_menu.c  maniahit_display.c  options.c  replay.c  replay_management_screen.c  results_screen.c  scoring.c  settings_menu.c  song_list.c  song_select.c
